# EngineTraining

src/: CMakeLists.txt
src/EtApp/: CMakeLists.txt
src/EtApp/src/: EtApp.cpp
src/EtRenderer/: CMakeLists.txt
